# libtimeseries

./: .clang-format  .gitignore  .gitmodules  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  tsmq-md-broker.c  tsmq-md-client  tsmq-md-client.c  tsmq-md-server  tsmq-md-server.c  tsmq.c  tsmq.h  tsmq_common.h  tsmq_int.h  tsmq_md_broker.c  tsmq_md_broker.h  tsmq_md_client.c  tsmq_md_client.h  tsmq_md_server.c  tsmq_md_server.h  tsmq_md_server_int.h
common/: Makefile.am  utils.c  utils.h
debian/: changelog  control  copyright  libtimeseries0-dev.install  libtimeseries0-tools.install  rules
lib/: Makefile.am  libtimeseries.h  libtimeseries_int.h  timeseries.c  timeseries.h  timeseries_backend.c  timeseries_backend.h  timeseries_backend_int.h  timeseries_backend_pub.h  timeseries_int.h  timeseries_kp.c  timeseries_kp_int.h  timeseries_kp_pub.h  timeseries_log.c  timeseries_log_int.h  timeseries_pub.h
lib/backends/: Makefile.am  timeseries_backend_ascii.c  timeseries_backend_ascii.h  timeseries_backend_dbats.c  timeseries_backend_dbats.h  timeseries_backend_kafka.c  timeseries_backend_kafka.h  timeseries_backend_tsmq.c  timeseries_backend_tsmq.h
lib/backends/libtsmq/: Makefile.am  tsmq.c  tsmq.h  tsmq_broker.c  tsmq_broker.h  tsmq_broker_int.h  tsmq_client.c  tsmq_client.h  tsmq_client_int.h  tsmq_common.h  tsmq_int.h  tsmq_md_broker_int.h  tsmq_md_client.c  tsmq_md_client.h  tsmq_md_client_int.h  tsmq_md_server.h  tsmq_md_server_int.h  tsmq_server.c  tsmq_server.h  tsmq_server_int.h
tools/: Makefile.am  timeseries-insert  timeseries-insert.c  tsk-proxy.c  tsmq-broker.c  tsmq-md-broker.c  tsmq-md-client.c  tsmq-md-server.c  tsmq-server.c  tsmq-test-client.c
